# Epub_backend

./: LICENSE  README.TXT  __init__.py  main.py  models.py  pyproject.toml  requirements.txt
routers/: __init__.py  v1.py  v2.py
services/: lector copy.py  lector.py
