[tool.poetry]
name = "api-read-epub"
version = "0.1.0"
description = "This example starts up a FastAPI server"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.80.0"
uvicorn = "^0.18.3"
ebooklib = "^0.17.1"
beautifulsoup4 ="^4.11.1"
nltk = "^3.7"
python-multipart = "^0.0.5"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"